--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -22,19 +22,12 @@
         android:visibility="gone" />
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="208dp"
-        android:background="@drawable/login_page_rectangles"
-        android:id="@+id/title">
-
-    </RelativeLayout>
-
-    <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@drawable/login_page_rectangles"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_weight="0.13">
 
 
@@ -106,6 +99,14 @@
             </LinearLayout>
 
         </LinearLayout>
-    </ScrollView>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:background="@drawable/login_page_rectangles"
+        android:id="@+id/title">
+
+    </RelativeLayout>
 
 </LinearLayout>
