setup fragments for navigation drawer and dashboard click

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -14,6 +14,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <FrameLayout
+        android:id="@+id/dashboard_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></FrameLayout>
+
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
@@ -24,82 +29,7 @@
         app:menu="@menu/activity_dashboard_drawer" />
 
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
 
-        <Button
-            android:id="@+id/recipes_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="My Recipes"
-            android:onClick="launchRecipes"
-            />
-
-        <Button
-            android:id="@+id/grocery_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Grocery Lists"
-            android:layout_above="@id/recipes_button"
-            android:onClick="launchGroceries"
-            />
-
-        <Button
-            android:id="@+id/search_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Search Recipes"
-            android:layout_above="@id/grocery_button"
-            android:onClick="launchSearch"
-            />
-
-        <Button
-            android:id="@+id/inventory_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Inventory"
-            android:layout_above="@id/search_button"
-            android:onClick="launchInventory"
-            />
-
-        <Button
-            android:id="@+id/scanner_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Scanner"
-            android:layout_below="@id/recipes_button"
-            android:onClick="launchScanner"
-            />
-        <Button
-            android:id="@+id/plan_week_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Plan Week"
-            android:layout_below="@id/scanner_button"
-            android:onClick="launchPlanWeek"
-            />
-        <Button
-            android:id="@+id/calendar_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Scanner"
-            android:layout_below="@id/plan_week_button"
-            android:onClick="launchCalendar"
-            />
-        <Button
-            android:id="@+id/logout_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Log Out"
-            android:layout_below="@id/calendar_button"
-            android:onClick="launchLogout"
-            />
-
-    </RelativeLayout>
 
 
 </android.support.v4.widget.DrawerLayout>
