--- a/app/src/main/res/layout/fragment_grocery_list.xml
+++ b/app/src/main/res/layout/fragment_grocery_list.xml
@@ -2,13 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/inventory_frag"
-    tools:context="iann91.uw.tacoma.edu.myfridge.InventoryFragment">
+    tools:context="iann91.uw.tacoma.edu.myfridge.GroceryListFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Inventory" />
+        android:text="Grocery List" />
 
 </FrameLayout>
