--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -1,14 +1,16 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/inventory_frag"
     tools:context="iann91.uw.tacoma.edu.myfridge.InventoryFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <Button
+        android:id="@+id/items_button"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Inventory" />
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="Items"
+        />
 
-</FrameLayout>
+</LinearLayout>
