--- a/app/src/main/res/layout/fragment_add_item.xml
+++ b/app/src/main/res/layout/fragment_add_item.xml
@@ -1,13 +1,50 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_add_item"
+    android:name="edu.uw.tacoma.mmuppa.webservicepractice.CourseAddFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="iann91.uw.tacoma.edu.myfridge.AddItemFragment">
+    android:orientation="vertical"
+    tools:context=".ItemDetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <EditText
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:hint="Enter item name"
+        android:id="@+id/add_item_name" />
 
-</FrameLayout>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Enter Quantity"
+        android:id="@+id/add_item_quantity" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Item Type: ie: Dairy"
+        android:id="@+id/add_item_type" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/add_item_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="Add Item"
+            android:onClick="addItem" />
+
+        <Button
+            android:id="@+id/update_item_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="Update Item"
+            android:onClick="addItem" />
+    </LinearLayout>
+
+
+</LinearLayout>
+
