--- a/app/src/main/res/layout-large/activity_login.xml
+++ b/app/src/main/res/layout-large/activity_login.xml
@@ -1,18 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <fragment
-        android:layout_width="match_parent"
-        android:layout_weight="2"
-        android:layout_height="match_parent"
-        android:id="@+id/login_frag"
-        android:name="iann91.uw.tacoma.edu.myfridge.LoginFragment"  />
-    <fragment
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/registration_frag"
-        android:name="iann91.uw.tacoma.edu.myfridge.RegistrationFragment" />
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
 
 
-</LinearLayout>
