--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="iann91.uw.tacoma.edu.myfridge.DashboardActivity"
+    tools:context="iann91.uw.tacoma.edu.myfridge.Dashboard.DashboardActivity"
     tools:showIn="@layout/app_bar_dashboard">
 
 </RelativeLayout>
