--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -9,7 +9,7 @@ android:fitsSystemWindows="true"
 tools:openDrawer="start"
 android:orientation="vertical"
 android:gravity="center"
-tools:context="iann91.uw.tacoma.edu.myfridge.DashboardFragment">
+tools:context="iann91.uw.tacoma.edu.myfridge.Dashboard.DashboardFragment">
 
 
 
