--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/inventory_frag"
-    tools:context="iann91.uw.tacoma.edu.myfridge.InventoryFragment">
+    tools:context="iann91.uw.tacoma.edu.myfridge.Inventory.InventoryFragment">
 
     <Button
         android:id="@+id/items_button"
