--- a/app/src/main/res/layout/fragment_item_list.xml
+++ b/app/src/main/res/layout/fragment_item_list.xml
@@ -9,5 +9,5 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context="iann91.uw.tacoma.edu.myfridge.ItemFragment"
+    tools:context="iann91.uw.tacoma.edu.myfridge.Inventory.ItemFragment"
     tools:listitem="@layout/fragment_item" />
