--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -1,16 +1,72 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/inventory_frag"
-    tools:context="iann91.uw.tacoma.edu.myfridge.Inventory.InventoryFragment">
+    android:fillViewport="true"
+    android:background="@color/background">
 
-    <Button
-        android:id="@+id/items_button"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Items"
-        />
+        android:layout_height="match_parent"
+        android:id="@+id/inventory_frag"
+        android:gravity="center"
+        tools:context="iann91.uw.tacoma.edu.myfridge.Inventory.InventoryFragment"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <Button
+            android:id="@+id/items_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Items"
+            android:background="@color/image_button"
+            android:layout_margin="10dp"/>
+
+        <Button
+            android:id="@+id/vegetables_button"
+            android:drawableTop="@drawable/vegetables"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/image_button"
+            android:text="Vegetables"
+            android:textColor="@color/black"
+            android:layout_margin="10dp"
+            android:textSize="32dp"/>
+
+        <Button
+            android:id="@+id/fruit_button"
+            android:drawableTop="@drawable/fruit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/image_button"
+            android:text="Fruit"
+            android:textColor="@color/black"
+            android:layout_margin="10dp"
+            android:textSize="32dp"/>
+
+        <Button
+            android:id="@+id/grains_button"
+            android:drawableTop="@drawable/bread"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/image_button"
+            android:text="Grains"
+            android:textColor="@color/black"
+            android:layout_margin="10dp"
+            android:textSize="32dp"/>
+
+        <Button
+            android:id="@+id/meat_button"
+            android:drawableTop="@drawable/meat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/image_button"
+            android:text="Meat"
+            android:textColor="@color/black"
+            android:layout_margin="10dp"
+            android:textSize="32dp"/>
+
+
+
+    </LinearLayout>
+</ScrollView>
