--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -28,7 +28,7 @@ tools:context="iann91.uw.tacoma.edu.myfridge.Dashboard.DashboardFragment">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Grocery Lists"
-        android:layout_above="@id/recipes_button"
+        android:layout_above="@+id/recipes_button"
         />
 
     <Button
