--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#333333</color>
-    <color name="colorPrimaryDark">#5ac5ff</color>
+    <color name="colorPrimaryDark">#153f7f</color>
     <color name="colorAccent">#ff4081</color>
     <color name="background">#e5e5e5</color>
     <color name="toolbarbackground">#297dfd</color>
