--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@color/myfridgeBackgroundColor</item>
+        <item name="android:background">@color/colorPrimaryDark</item>
 
         <item name="android:textColor">@color/myfridgeTextColor</item>
         <item name="android:textSize">24sp</item>
