--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,11 +4,11 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@color/myfridgeBackgroundColor</item>
-        <item name="android:background">@color/colorPrimaryDark</item>
+
 
         <item name="android:textColor">@color/myfridgeTextColor</item>
         <item name="android:textSize">24sp</item>
-        <item name="android:editTextColor">@color/myfridgeEditTextColor</item>
+        <item name="android:editTextColor">@color/myfridgeTextColor</item>
         <item name="android:textColorHint">@color/myfridgeTextHintColor</item>
     </style>
 
@@ -22,7 +22,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">20sp</item>
-        <item name="android:background">@color/colorPrimaryDark</item>
+        <item name="android:background">@color/colorButtonPrimaryDark</item>
         <item name="android:textColor">@color/myfridgeEditTextColor</item>
         <item name="android:typeface">monospace</item>
     </style>
