--- a/app/src/main/res/layout/fragment_grocery_list.xml
+++ b/app/src/main/res/layout/fragment_grocery_list.xml
@@ -1,13 +1,18 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="iann91.uw.tacoma.edu.myfridge.GroceryListFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/my_grocery_list_textview"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:text="Grocery List" />
+        />
+    <ListView android:id="@+id/grocery_listView"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 
-</FrameLayout>
+</LinearLayout>
