--- a/app/src/main/res/layout/fragment_grocery_list.xml
+++ b/app/src/main/res/layout/fragment_grocery_list.xml
@@ -3,16 +3,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="10dp"
     tools:context="iann91.uw.tacoma.edu.myfridge.GroceryListFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
-        android:id="@+id/my_grocery_list_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        />
-    <ListView android:id="@+id/grocery_listView"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/my_grocery_list_textview" />
+
+    <Button
+        android:text="Delete Checked items"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/deleteCheckedItems" />
+
+    <ListView
+        android:id="@+id/grocery_listView"
+
+        android:layout_width="match_parent"
         android:layout_height="fill_parent" />
+
 
 </LinearLayout>
