--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,15 @@
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@color/myfridgeBackgroundColor</item>
 
+        <item name="android:textColor">@color/myfridgeTextColor</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:editTextColor">@color/myfridgeTextColor</item>
+        <item name="android:textColorHint">@color/myfridgeTextHintColor</item>
+    </style>
+
+    <style name="DashTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="android:background">@drawable/myfridgeback</item>
 
         <item name="android:textColor">@color/myfridgeTextColor</item>
         <item name="android:textSize">24sp</item>
