--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:fitsSystemWindows="true"
     android:id="@+id/login_form"
-    android:background="@color/background"
+    android:background="@drawable/gradient"
     >
 
     <LinearLayout
