fixed dependencies error

--- a/app/src/main/res/layout/fragment_inventory.xml
+++ b/app/src/main/res/layout/fragment_inventory.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    android:background="@color/background">
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,14 +11,15 @@
         android:id="@+id/inventory_frag"
         android:gravity="center"
         tools:context="iann91.uw.tacoma.edu.myfridge.Inventory.InventoryFragment"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/gradient">
 
         <Button
             android:id="@+id/vegetables_button"
             android:drawableTop="@drawable/vegetables"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/image_button"
+            android:background="@null"
             android:text="Vegetables"
             android:textColor="@color/black"
             android:layout_margin="10dp"
@@ -29,7 +30,7 @@
             android:drawableTop="@drawable/fruit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/image_button"
+            android:background="@null"
             android:text="Fruit"
             android:textColor="@color/black"
             android:layout_margin="10dp"
@@ -40,7 +41,7 @@
             android:drawableTop="@drawable/bread"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/image_button"
+            android:background="@null"
             android:text="Grains"
             android:textColor="@color/black"
             android:layout_margin="10dp"
@@ -51,7 +52,7 @@
             android:drawableTop="@drawable/meat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/image_button"
+            android:background="@null"
             android:text="Meat"
             android:textColor="@color/black"
             android:layout_margin="10dp"
@@ -62,7 +63,7 @@
             android:drawableTop="@drawable/dairy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/image_button"
+            android:background="@null"
             android:text="Dairy"
             android:textColor="@color/black"
             android:layout_margin="10dp"
