--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -42,7 +42,7 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:scaleType="fitCenter"/>
-    />
+
 
     <ImageButton
         android:id="@+id/inventory_button"
@@ -57,11 +57,11 @@
         android:layout_rowWeight="1"
         android:scaleType="fitCenter"/>
 
-    />
+
 
 
     <ImageButton
-        android:id="@+id/logout_button"
+        android:id="@+id/logout_button_dash"
         android:src="@drawable/logout"
         android:background="@null"
         android:text="Log Out"
@@ -73,7 +73,6 @@
         android:layout_rowWeight="1"
         android:scaleType="fitCenter"/>
 
-    />
     <ImageButton
         android:id="@+id/grocery_button"
         android:src="@drawable/grocerylistimagebutton"
@@ -86,9 +85,6 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         android:scaleType="fitCenter"/>
-
-    />
-
 
 
     <ImageButton
@@ -104,7 +100,6 @@
         android:layout_rowWeight="1"
         android:scaleType="fitCenter"/>
 
-    />
 
     <ImageButton
         android:id="@+id/scanner_button"
@@ -119,7 +114,7 @@
         android:layout_rowWeight="1"
         android:scaleType="fitCenter"/>
 
-    />
+
 
 </GridLayout>
 
